# AML_Final_Project

./: ._README.md  .gitignore  CONTRIBUTING.md  PLAN.md  README.md  environment.yml  pyproject.toml  setup.sh
notebooks/: baseline.ipynb  high_error.csv  low_error.csv  lstm.ipynb  prediction.ipynb  preprocessing.ipynb  process_elonmusk.ipynb  process_teslastock.ipynb  test.ipynb
